<resources>
    <string name="app_name">Tappze_Clone</string>
    <string name="starting_screen_text">It\'s not just a Tap, it\'s a way of thinking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="existing_member">Existing Member? </string>
    <string name="sign_in">Sign In</string>
    <string name="policy_terms">Going Forward, I agree to the\n privacy Policy /&amp; Terms of Service</string>
    <string name="welcome_back">Welcome back,\n Sign in Your account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account_join">Create your account to\n join the network</string>
    <string name="full_name">Full Name</string>
    <string name="password_valid">Your password must be 6 digits or long.</string>
    <string name="scan_tag">Scan Tag</string>
    <string name="tag_activate">Your tag will be activated with your username: </string>
    <string name="subscription">Subscriptions</string>
    <string name="purchase_item">Purchase Items</string>
    <string name="change_password">Change Password</string>
    <string name="contact">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="username_validation">Allowed characters are a–z,0-9. special \n characters are not allowed</string>
</resources>