<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">


    <ImageView
        android:id="@+id/image_tappze"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:src="@drawable/tappze1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/subscription"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_tappze" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/purchase_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/purchase_item"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subscription" />
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/change_password"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchase_item" />
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/contact"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_password" />
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/sign_out"
        android:textSize="27sp"
        android:textStyle="bold"
        android:textColor="#D71010"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_us" />


    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <RadioGroup
        android:id="@+id/profile_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

    <RadioButton

        android:id="@+id/radio_profile_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/custom_radio_button"
        android:button="@null"
        android:checked="true"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="Profile Off"
        android:textColor="@drawable/rbt_text_color_selector" />

    <RadioButton
        android:id="@+id/radio_profile_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/custom_radio_button"
        android:button="@null"
        android:gravity="center"
        android:paddingTop="2dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="Profile On"
        android:textColor="@drawable/rbt_text_color_selector" />
    </RadioGroup>
    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:flow_wrapMode="chain"
        app:flow_horizontalGap="20dp"
        app:constraint_referenced_ids="profile,profile_radio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />















</androidx.constraintlayout.widget.ConstraintLayout>