<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".views.LogInFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_margin="16dp"
        android:id="@+id/arrow_back"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
   />

    <ImageView
        android:id="@+id/image_tappze"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:src="@drawable/Tappze1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow_back"
        />

    <TextView
        android:id="@+id/welcome_tex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_tappze" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_tex">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lg_user_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Email"

            android:maxLines="1"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_layout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lg_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Password"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/forgot_password"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/password_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:layout_margin="16dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/sign_in"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"

<TextView
    android:id="@+id/dont_have_account"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/dont_have_account"
    />
    <TextView
        android:clickable="true"
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:constraint_referenced_ids="dont_have_account,sign_up"
        app:flow_wrapMode="chain"
        app:flow_horizontalGap="2dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>