<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".views.SignUpFragment">

<androidx.constraintlayout.widget.ConstraintLayout
android:id="@+id/frameLayout2"
android:background="@color/white"
android:layout_width="match_parent"
android:layout_height="wrap_content">

<!-- Your existing layout content -->
<ImageView
    android:layout_margin="16dp"
    android:id="@+id/arrow_back"
    android:clickable="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/arrow_back"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

<ImageView
    android:id="@+id/image_tappze"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/tappze1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/arrow_back" />

<TextView
    android:id="@+id/welcome_tex"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/create_account_join"
    android:textSize="24sp"
    android:gravity="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/image_tappze" />

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/full_name_layout"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="16dp"
    app:boxBackgroundColor="@color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/welcome_tex">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/su_full_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="Full Name"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/user_name_layout"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="16dp"
    app:boxBackgroundColor="@color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/full_name_layout">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/su_user_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="Username"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />
</com.google.android.material.textfield.TextInputLayout>

<TextView
    android:id="@+id/username_validation_text"
    android:layout_width="wrap_content"
    android:layout_marginTop="2dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:text="@string/username_validation"
    android:textColor="#595656"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/user_name_layout" />

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/su_email_layout"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="16dp"
    app:boxBackgroundColor="@color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/username_validation_text">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/su_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="Email"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/password_layout"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="16dp"
    app:boxBackgroundColor="@color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/su_email_layout"
    app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/su_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="Password"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />
</com.google.android.material.textfield.TextInputLayout>

<TextView
    android:id="@+id/password_valid"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/password_valid"
    android:layout_marginLeft="30dp"
    android:textStyle="normal"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/password_layout" />

<Button
    android:id="@+id/su_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:backgroundTint="@color/black"
    android:text="@string/sign_up"
    app:layout_constraintTop_toBottomOf="@+id/password_valid"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/policy_terms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/su_button" />




</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
